--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,15 @@ set(CMAKE_C_STANDARD 11)
 add_executable(
         Razor
         src/main.c
-        src/socket_posix.c)
+        src/listener.c
+)
 
 target_include_directories(Razor PRIVATE include)
 
 if(MSVC)
     target_compile_options(Razor PRIVATE /W4 /WX)
-    target_sources(Razor PRIVATE src/socket_win32.c)
+    target_sources(Razor PRIVATE src/raknet/socket_win32.c)
 else()
     target_compile_options(Razor PRIVATE -Wall -Wextra -Werror -pedantic)
-    target_sources(Razor PRIVATE src/socket_posix.c)
+    target_sources(Razor PRIVATE src/raknet/socket_posix.c)
 endif()
